# bug-free-goggles

./: .gitignore  CMakeLists.txt  Makefile  README.md  Taskfile.yml  TutorialConfig.h  TutorialConfig.h.in  example.cpp  main.cpp  math  notes.md  sandbox  test  test.cpp  tutorial  tutorial.cxx
glad/include/glad/: glad.h
glad/src/: glad.c
lib/: GLManager.h  Shader.h
math/: main.cpp  makefile  math  matrix  matrix.cpp  matrix.h  vector_methods.cpp  vector_methods.h
math_lib/: CMakeLists.txt  main.cpp  math  matrix.cpp  matrix.h  vector_methods.cpp  vector_methods.h
opengl/: README.md  Taskfile.yml  main.cpp
opengl/shaders/: shader.fs
sandbox_lib/: eagerness.cpp  eagerness.h  sandbox.cpp
scripts/: glsl_to_string.sh
shaders/: fragment_shader_yellow.glsl  shader.fs  shader.vs  vertex_shader.glsl
